methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:66: error: ')' expected but ';' found.
  ligne2 (Color.RED; Color.BLUE);
                   ^PatternPicture:66: error: ';' expected but ')' found.
  ligne2 (Color.RED; Color.BLUE);
                               ^PatternPicture:70: error: ';' expected but ')' found.
  ligne2 (Color.YELLOW; Color.GREEN);
                                   ^